Fixed problem with demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,7 +24,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../app-pouchdb-quick-search.html">
   <link rel="import" href="search-result.html">
 
-  <script src="../test/test-docs.js"></script>
+  <script src="test-docs.js"></script>
   <style is="custom-style" include="demo-pages-shared-styles">
   .vertical-section-container {
     max-width: 600px;
