New: Added hero image

--- a/app-pouchdb-quick-search.html
+++ b/app-pouchdb-quick-search.html
@@ -193,6 +193,7 @@ will be performed automatically and `index-deleted` event will be fired when fin
 @group Logic Elements
 @element app-pouchdb-quick-search
 @demo demo/index.html
+@hero hero.svg
 -->
 <script>
 (function() {
